added login pages with auth service
added login pages with auth service

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,8 @@
-<p>home works!</p>
-<app-login></app-login>
+<div container>
+<div class="main-content">
+
+</div>
+    <div class="sidebar">
+        <app-login></app-login>
+    </div>
+</div>
