--- a/src/app/product/products/products.component.html
+++ b/src/app/product/products/products.component.html
@@ -1,11 +1,7 @@
-<p>products works!</p>
 <div class="container">
-
-            <button class="btn btn-primary"  routerLink="/add-product"  >Add Product </button>
-            <button class="btn btn-success"  routerLink="/view-product" >View Products</button>
+    <button style="float:right" class="btn btn-primary" (click)="addProduct()">Add Product </button>
+    <div class="col-sm-6">
+        <app-product-list [products]="products"></app-product-list>
+    </div>
 </div>
-
-<!--
-
--->
 <router-outlet></router-outlet>
