Added product module and details
Added product module and details in a list component along with routing

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div container>
 <div class="main-content">
+    <a routerLink="login">Login</a>
+<a routerLink="signup">Signup</a>
 
 </div>
-    <div class="sidebar">
-        <app-login></app-login>
-    </div>
+<router-outlet></router-outlet>
 </div>
