--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
         <div class="navbar-nav">
             <a class="nav-item nav-link"  routerLink="/home"  routerLinkActive="active">Home </a>
             <a class="nav-item nav-link"  routerLink="/products" routerLinkActive="active">Products</a>
-            <a class="nav-item nav-link"  routerLink="/profile" routerLinkActive="active">Profile </a>
+            <a class="nav-item nav-link"  routerLink="/profile/user-profile" routerLinkActive="active">Profile </a>
             <a class="nav-item nav-link"  routerLink="/settings" routerLinkActive="active">Settings</a>
         </div>
     </nav>
