--- a/src/app/product/products/products.component.css
+++ b/src/app/product/products/products.component.css
@@ -1,3 +1,11 @@
 a{
     cursor:pointer
 }
+
+.small-component{
+    height: 400px;
+    width: 300px;
+    margin-top:10px;
+    background-color: grey;
+}
+
