added new moudles & services contact form and  new loading form api
completed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,11 @@
 <div container>
-<div class="main-content">
-    <a routerLink="login">Login</a>
-<a routerLink="signup">Signup</a>
+    <div class="row">
 
-</div>
-<router-outlet></router-outlet>
+        <div class="main-content">
+            <a routerLink="login">Login</a>
+            <a routerLink="signup">Signup</a>
+            <a routerLink="contact" name="contact">Contact</a>
+        </div>
+        <router-outlet></router-outlet>
+    </div>
 </div>
