--- a/src/app/product/products/product-list/product-item/product-item.component.html
+++ b/src/app/product/products/product-list/product-item/product-item.component.html
@@ -8,7 +8,7 @@
                 </div>
                 <div style="float:right; margin-top:-60px">
                     <span >
-                        <img [src]="productItem.imageUrl" class="img-responsive" style="height:20px; width:40px;">
+                        <img [src]="productItem.imageUrl" class="img-responsive" style="height:40px; width:60px; border-radius: 2px;">
                     </span>
                 </div>    
             </div>
