--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,13 +1,14 @@
-<div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="navbar-nav">
-            <a class="nav-item nav-link"  routerLink="/home"  routerLinkActive="active">Home </a>
-            <a class="nav-item nav-link"  routerLink="/products" routerLinkActive="active">Products</a>
-            <a class="nav-item nav-link"  routerLink="/profile/user-profile" routerLinkActive="active">Profile </a>
-            <a class="nav-item nav-link"  routerLink="/settings" routerLinkActive="active">Settings</a>
-        </div>
-    </nav>
-<div class="col-sm-8">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="navbar-nav">
+        <a class="nav-item nav-link"  routerLink="/home"  routerLinkActive="active">Home </a>
+        <a class="nav-item nav-link"  routerLink="/products" routerLinkActive="active">Products</a>
+        <a class="nav-item nav-link"  routerLink="/profile/user-profile" routerLinkActive="active">Profile </a>
+        <a class="nav-item nav-link"  routerLink="/settings" routerLinkActive="active">Settings</a>        
+        <a class="nav-item nav-link"  routerLink="/news" routerLinkActive="active">News</a>
+    </div>
+</nav>
+<div>
+<div class="col-sm-12">
     <router-outlet></router-outlet>
 </div>
 </div>
